--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-08  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimphelpui.c (gimp_context_help): fixed typo in
+	API docs.
+
 2004-07-08  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/Presets: converted the newlines in the
