2004-07-09  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphistogrameditor.c
	(gimp_histogram_editor_menu_update): reverted my last change.
	(gimp_histogram_editor_item_visible): fix the problem here instead.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13901 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-09  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphistogrameditor.c
+	(gimp_histogram_editor_menu_update): reverted my last change.
+	(gimp_histogram_editor_item_visible): fix the problem here instead.
+
 2004-07-08  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpdialog.c: removed "role" property because
