2004-07-11  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/widgets/gimpdevices.c (gimp_devices_check_change): Applied
	a patch from Robert Robert Ãâgren, moved here from
	toolbox_check_device() - Only change devices if the event came from
	a widget that accepts extension events. Fixes bug #115774.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13916 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-11  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/widgets/gimpdevices.c (gimp_devices_check_change): Applied
+	a patch from Robert Robert Ã–gren, moved here from
+	toolbox_check_device() - Only change devices if the event came from
+	a widget that accepts extension events. Fixes bug #115774.
+
 2004-07-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimp-utils.[ch] (gimp_parameters_append)
