--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-11  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
+	* plug-ins/gfig/gfig-dobject.h: fix commit error that
+	broke build.
+	
+2004-07-11  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
 	* plug-ins/gfig/gfig-dialog.c
 	* plug-ins/gfig/gfig-dobject.[ch]
 	* plug-ins/gfig/gfig.c: added buttons to select an object, and
