--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff.c: applied a patch from Brion Vibber that
+	sets the 'Save color values from transparent pixels' insensitive
+	when there's no alpha channel.
+
 2004-07-11  Hans Breuer  <hans@breuer.org>
 
 	* **/makefile.msc : updated
