--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2004-07-12  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplay-foreach.c
-	(gimp_displays_get_dirty_images): removed images from the
+	(gimp_displays_get_dirty_images): remove images from the
 	container when they become clean. Should move to the Gimp object.
 
 	* app/gui/quit-dialog.c: some cosmetic changes.
@@ -46,10 +46,10 @@
 	
 2004-07-11  Philip Lafleur  <plafleur@cvs.gnome.org>
 
-	* app/widgets/gimpdevices.c (gimp_devices_check_change): Applied
-	a patch from Robert Ã–gren, moved here from toolbox_check_device() -
-	Only change devices if the event came from a widget that accepts
-	extension events. Fixes bug #115774.
+	* app/widgets/gimpdevices.c (gimp_devices_check_change): Applied a
+	patch from Robert Ã–gren, moved here from
+	toolbox_check_device() - Only change devices if the event came
+	from a widget that accepts extension events. Fixes bug #115774.
 
 2004-07-11  Michael Natterer  <mitch@gimp.org>
 
