2004-07-12  Michael Natterer  <mitch@gimp.org>
	* app/core/Makefile.am
	* app/core/gimp-gui.[ch]: new files defining a GimpGui vtable
	struct and contianing all the vtable wrapper functions. Reordered
	and renamed some functions for consistency.

	* app/core/gimp.[ch]: removed all the vtable code.

	* app/gui/gui-vtable.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13926 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-07-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/Makefile.am
+	* app/core/gimp-gui.[ch]: new files defining a GimpGui vtable
+	struct and contianing all the vtable wrapper functions. Reordered
+	and renamed some functions for consistency.
+
+	* app/core/gimp.[ch]: removed all the vtable code.
+
+	* app/gui/gui-vtable.c: changed accordingly.
+
 2004-07-12  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpdisplay-foreach.c
