2004-07-12  Sven Neumann  <sven@gimp.org>
	* app/app_procs.s: don't use gtk_main() / gtk_main_quit() but run
	our own main-loop like we already used to do when being run
	non-interactively.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13930 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-12  Sven Neumann  <sven@gimp.org>
+
+	* app/app_procs.s: don't use gtk_main() / gtk_main_quit() but run
+	our own main-loop like we already used to do when being run
+	non-interactively.
+
 2004-07-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdialogfactory.c
