--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-07-12  Sven Neumann  <sven@gimp.org>
 
+	* app/sanity.[ch]: removed the gtk+ sanity check here ...
+
+	* app/gui/gui.c: ... and do it here from gui_libs_init().
+	
+	* app/main.c: changed accordingly.
+
+2004-07-12  Sven Neumann  <sven@gimp.org>
+
 	* app/app_procs.s: don't use gtk_main() / gtk_main_quit() but run
 	our own main-loop like we already used to do when being run
 	non-interactively.
