2004-07-12  Sven Neumann  <sven@gimp.org>
	* INSTALL: made the suggestion to use binary packages more
	prominent, mention --enable-gimp-console.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13932 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-12  Sven Neumann  <sven@gimp.org>
 
+	* INSTALL: made the suggestion to use binary packages more
+	prominent, mention --enable-gimp-console.
+
+2004-07-12  Sven Neumann  <sven@gimp.org>
+
 	* app/sanity.[ch]: removed the gtk+ sanity check here ...
 
 	* app/gui/gui.c: ... and do it here from gui_libs_init().
