2004-07-12  Michael Natterer  <mitch@gimp.org>
	* app/core/gimp-modules.c: don't do anything if gimp->no_interface
	is TRUE.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13934 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-12  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimp-modules.c: don't do anything if gimp->no_interface
+	is TRUE.
+
+2004-07-12  Michael Natterer  <mitch@gimp.org>
+
 	Made the gimp-console binary compile.
 	Finishes core/GUI separation and fixes bug #71514:
 
