--- a/ChangeLog
+++ b/ChangeLog
@@ -119,9 +119,9 @@
 2004-07-11  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* app/widgets/gimpdevices.c (gimp_devices_check_change): Applied a
-	patch from Robert Ã–gren, moved here from
-	toolbox_check_device() - Only change devices if the event came
-	from a widget that accepts extension events. Fixes bug #115774.
+	patch from Robert Ögren, moved here from toolbox_check_device().
+	Only change devices if the event came from a widget that accepts
+	extension events. Fixes bug #115774.
 
 2004-07-11  Michael Natterer  <mitch@gimp.org>
 
