2004-07-12  Sven Neumann  <sven@gimp.org>
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-preview.c
	* plug-ins/gfig/gfig-style.c
	* plug-ins/gfig/gfig.c: some include cleanups. Use
	libgimpbase/gimpwin32-io.h instead of defining W_OK explicitely.
	Don't undef GTK_DISABLE_DEPRECATED except for gfig-preview.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13942 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/gfig/gfig-dialog.c
+	* plug-ins/gfig/gfig-preview.c
+	* plug-ins/gfig/gfig-style.c
+	* plug-ins/gfig/gfig.c: some include cleanups. Use
+	libgimpbase/gimpwin32-io.h instead of defining W_OK explicitely.
+	Don't undef GTK_DISABLE_DEPRECATED except for gfig-preview.c.
+
 2004-07-12  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/script-fu/scripts/round-corners.scm: applied patch from
