2004-07-12  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpbufferview.[ch]: added a preview of the global
	buffer.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13946 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpbufferview.[ch]: added a preview of the global
+	buffer.
+
 2004-07-12  Sven Neumann  <sven@gimp.org>
 
 	* app/Makefile.am: make sure that gimp-console is enabled for
