--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-12  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* app/app_procs.c: added
+	#ifdef G_OS_WIN32
+	#include <windows.h>
+	#endif
+
 2004-07-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpbufferview.[ch]: added a preview of the global
