2004-07-13  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am: removed hack for gimp-console compilation.
	automake seems to handle it correctly all by itself.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13949 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-13  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am: removed hack for gimp-console compilation.
+	automake seems to handle it correctly all by itself.
+
 2004-07-12  Michael Schumacher <schumaml@cvs.gnome.org>
 
 	* app/app_procs.c: added
